# RtspProject

./: .gitignore
client/camera_node/: CMakeLists.txt  testLocalH264.cpp
client/camera_node/src/: main.cpp
client/camera_node/src/camera/: V4L2Capture.cpp  V4L2Capture.h
client/camera_node/src/network/: TcpClient.cpp  TcpClient.h
client_user/: CMakeLists.txt  Dev.md  GLB_SETUP.md  Makefile  README.md  cmake_install.cmake  regenerate_protobuf.sh
client_user/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
client_user/.qt/rcc/: qml_resources.qrc
client_user/python/: MEDIAPIPE_ARCHITECTURE.md  README.md  mediapipe_module.py  mediapipe_processor.py  test.py
client_user/qml/: VideoScene.qml  View3D.qml
client_user/src/: MainWindow.cpp  MainWindow.h  MediaPipeProcessor.cpp  MediaPipeProcessor.h  VideoGLWidget.cpp  VideoGLWidget.h  VideoQuick3DWidget.cpp  VideoQuick3DWidget.h  main.cpp
docs/: client_user.md
resource/: README.md
resource/assets/: Avatar01.glb  Avatar02.glb  Avatar03.glb
server/: ARCHITECTURE.md  CMakeLists.txt
server/src/: main.cpp
server/src/media/: H264Parser.cpp  H264Parser.h  StreamBuffer.cpp  StreamBuffer.h
server/src/net/: CameraReceiver.cpp  CameraReceiver.h  RtpSender.cpp  RtpSender.h  RtspSession.cpp  RtspSession.h  TcpServer.cpp  TcpServer.h
server/src/utils/: base64.cpp  base64.h
test/YuNet_Dlib/: CMakeLists.txt  README.md  download_models.sh  test_dev.md  test_dlib_face.cpp
